books/projects/rac/tests/yaml_test/control_flow/if-else-return-not-complete-1.ref.stderr
if-else-return-not-complete-1.cpp:8 (4-5): syntax error, unexpected ID, expecting IF or RETURN or '{'
  8 |     a = 2;
    |     ^
