books/projects/rac/tests/yaml_test/control_flow/if-else-return-not-complete-1.cpp
// RAC begin

int foo(int a)
{
  if (a)
    return 1;
  else
    a = 2;

  return 0;
}

// RAC end
